--- a/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
+++ b/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
@@ -216,6 +216,7 @@
     <None Remove="TestFiles\Pvp\PvpSeasons.bulk.json" />
     <None Remove="TestFiles\Pvp\PvpSeasons.ids.json" />
     <None Remove="TestFiles\Pvp\PvpSeasons.single.json" />
+    <None Remove="TestFiles\Pvp\PvpStats.json" />
     <None Remove="TestFiles\Render\414998.png" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
@@ -412,21 +413,22 @@
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.bulk.json" />
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.ids.json" />
     <EmbeddedResource Include="TestFiles\Outfits\Outfits.single.json" />
-    <EmbeddedResource Include="TestFiles\Pvp\PvpSeasons.ids.json" />
-    <EmbeddedResource Include="TestFiles\Pvp\PvpSeasons.single.json" />
-    <EmbeddedResource Include="TestFiles\Pvp\PvpSeasons.bulk.json" />
-    <EmbeddedResource Include="TestFiles\Pvp\PvpRanks.single.json" />
-    <EmbeddedResource Include="TestFiles\Pvp\PvpRanks.ids.json" />
-    <EmbeddedResource Include="TestFiles\Pvp\PvpRanks.bulk.json" />
-    <EmbeddedResource Include="TestFiles\Pvp\PvpGames.bulk.json" />
-    <EmbeddedResource Include="TestFiles\Pvp\PvpGames.ids.json" />
-    <EmbeddedResource Include="TestFiles\Pvp\PvpGames.single.json" />
-    <EmbeddedResource Include="TestFiles\Pvp\PvpAmulets.bulk.json" />
-    <EmbeddedResource Include="TestFiles\Pvp\PvpAmulets.ids.json" />
-    <EmbeddedResource Include="TestFiles\Pvp\PvpAmulets.single.json" />
     <EmbeddedResource Include="TestFiles\Professions\Professions.bulk.json" />
     <EmbeddedResource Include="TestFiles\Professions\Professions.ids.json" />
     <EmbeddedResource Include="TestFiles\Professions\Professions.single.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpAmulets.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpAmulets.ids.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpAmulets.single.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpGames.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpGames.ids.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpGames.single.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpRanks.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpRanks.ids.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpRanks.single.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpSeasons.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpSeasons.ids.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpSeasons.single.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpStats.json" />
     <EmbeddedResource Include="TestFiles\Render\414998.png" />
     <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
