--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,6 +22,9 @@ before_build:
         -replace '<Version>([^<]*)</Version>', "<Version>`$1-appveyor.$env:APPVEYOR_BUILD_VERSION</Version>" |
       Out-File Gw2Sharp/Gw2Sharp.csproj
   - ps: >-
+      $version = Get-Content Gw2Sharp/Gw2Sharp.csproj | Select-String -Pattern '<Version>([^<]*)</Version>' -AllMatches | % { $_.Matches.Groups[1].Value }
+      Update-AppveyorBuild -Version '$version-$env:APPVEYOR_BUILD_VERSION'
+  - ps: >-
       if (!(Test-Path env:APPVEYOR_PULL_REQUEST_NUMBER)) {
         if ($env:APPVEYOR_REPO_TAG -eq "true") {
           dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$env:SONAR_TOKEN" /d:sonar.cs.opencover.reportsPaths="coverage.xml" /d:sonar.branch.name="$env:APPVEYOR_REPO_BRANCH" /v:"$env:APPVEYOR_REPO_TAG_NAME"
