--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,9 +21,9 @@ before_build:
       $version = Get-Content Gw2Sharp/Gw2Sharp.csproj | Select-String -Pattern '<Version>([^<]*)</Version>' -AllMatches | % { $_.Matches.Groups[1].Value }
 
       Update-AppveyorBuild -Version "$version-$env:APPVEYOR_BUILD_VERSION"
-  - ps: >-
+
       (Get-Content Gw2Sharp/Gw2Sharp.csproj) `
-        -replace '<Version>([^<]*)</Version>', "<Version>`$1-appveyor.$env:APPVEYOR_BUILD_VERSION</Version>" |
+        -replace '<Version>([^<]*)</Version>', "<Version>`$version-appveyor.$env:APPVEYOR_BUILD_VERSION</Version>" |
       Out-File Gw2Sharp/Gw2Sharp.csproj
   - ps: >-
       if (!(Test-Path env:APPVEYOR_PULL_REQUEST_NUMBER)) {
