--- a/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
+++ b/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
@@ -222,6 +222,7 @@
     <None Remove="TestFiles\Pvp\PvpSeasons.bulk.json" />
     <None Remove="TestFiles\Pvp\PvpSeasons.ids.json" />
     <None Remove="TestFiles\Pvp\PvpSeasons.single.json" />
+    <None Remove="TestFiles\Pvp\PvpStandings.json" />
     <None Remove="TestFiles\Pvp\PvpStats.json" />
     <None Remove="TestFiles\Render\414998.png" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
@@ -440,6 +441,7 @@
     <EmbeddedResource Include="TestFiles\Pvp\PvpSeasons.bulk.json" />
     <EmbeddedResource Include="TestFiles\Pvp\PvpSeasons.ids.json" />
     <EmbeddedResource Include="TestFiles\Pvp\PvpSeasons.single.json" />
+    <EmbeddedResource Include="TestFiles\Pvp\PvpStandings.json" />
     <EmbeddedResource Include="TestFiles\Pvp\PvpStats.json" />
     <EmbeddedResource Include="TestFiles\Render\414998.png" />
     <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
