--- a/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
+++ b/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
@@ -224,6 +224,9 @@
     <None Remove="TestFiles\Pvp\PvpSeasons.single.json" />
     <None Remove="TestFiles\Pvp\PvpStandings.json" />
     <None Remove="TestFiles\Pvp\PvpStats.json" />
+    <None Remove="TestFiles\Quaggans\Quaggans.bulk.json" />
+    <None Remove="TestFiles\Quaggans\Quaggans.ids.json" />
+    <None Remove="TestFiles\Quaggans\Quaggans.single.json" />
     <None Remove="TestFiles\Render\414998.png" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
@@ -443,6 +446,9 @@
     <EmbeddedResource Include="TestFiles\Pvp\PvpSeasons.single.json" />
     <EmbeddedResource Include="TestFiles\Pvp\PvpStandings.json" />
     <EmbeddedResource Include="TestFiles\Pvp\PvpStats.json" />
+    <EmbeddedResource Include="TestFiles\Quaggans\Quaggans.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Quaggans\Quaggans.ids.json" />
+    <EmbeddedResource Include="TestFiles\Quaggans\Quaggans.single.json" />
     <EmbeddedResource Include="TestFiles\Render\414998.png" />
     <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
