--- a/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
+++ b/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
@@ -230,6 +230,9 @@
     <None Remove="TestFiles\Quests\Quests.bulk.json" />
     <None Remove="TestFiles\Quests\Quests.ids.json" />
     <None Remove="TestFiles\Quests\Quests.single.json" />
+    <None Remove="TestFiles\Races\Races.bulk.json" />
+    <None Remove="TestFiles\Races\Races.ids.json" />
+    <None Remove="TestFiles\Races\Races.single.json" />
     <None Remove="TestFiles\Render\414998.png" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
@@ -455,6 +458,9 @@
     <EmbeddedResource Include="TestFiles\Quests\Quests.bulk.json" />
     <EmbeddedResource Include="TestFiles\Quests\Quests.ids.json" />
     <EmbeddedResource Include="TestFiles\Quests\Quests.single.json" />
+    <EmbeddedResource Include="TestFiles\Races\Races.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Races\Races.ids.json" />
+    <EmbeddedResource Include="TestFiles\Races\Races.single.json" />
     <EmbeddedResource Include="TestFiles\Render\414998.png" />
     <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
