--- a/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
+++ b/Gw2Sharp.Tests/Gw2Sharp.Tests.csproj
@@ -237,6 +237,9 @@
     <None Remove="TestFiles\Raids\Raids.bulk.json" />
     <None Remove="TestFiles\Raids\Raids.ids.json" />
     <None Remove="TestFiles\Raids\Raids.single.json" />
+    <None Remove="TestFiles\Recipes\Recipes.bulk.json" />
+    <None Remove="TestFiles\Recipes\Recipes.ids.json" />
+    <None Remove="TestFiles\Recipes\Recipes.single.json" />
     <None Remove="TestFiles\Render\414998.png" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <None Remove="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
@@ -469,6 +472,9 @@
     <EmbeddedResource Include="TestFiles\Raids\Raids.bulk.json" />
     <EmbeddedResource Include="TestFiles\Raids\Raids.ids.json" />
     <EmbeddedResource Include="TestFiles\Raids\Raids.single.json" />
+    <EmbeddedResource Include="TestFiles\Recipes\Recipes.bulk.json" />
+    <EmbeddedResource Include="TestFiles\Recipes\Recipes.ids.json" />
+    <EmbeddedResource Include="TestFiles\Recipes\Recipes.single.json" />
     <EmbeddedResource Include="TestFiles\Render\414998.png" />
     <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.ApiToken.json" />
     <EmbeddedResource Include="TestFiles\TokenInfo\TokenInfo.SubToken.json" />
