--- a/master/xrefmap.yml
+++ b/master/xrefmap.yml
@@ -4392,6 +4392,25 @@ references:
   isSpec: "True"
   fullName: Gw2Sharp.WebApi.Http.HttpResponseStream.ContentStream
   nameWithType: HttpResponseStream.ContentStream
+- uid: Gw2Sharp.WebApi.Http.HttpResponseStream.Dispose
+  name: Dispose()
+  href: api/Gw2Sharp.WebApi.Http.HttpResponseStream.html#Gw2Sharp_WebApi_Http_HttpResponseStream_Dispose
+  commentId: M:Gw2Sharp.WebApi.Http.HttpResponseStream.Dispose
+  fullName: Gw2Sharp.WebApi.Http.HttpResponseStream.Dispose()
+  nameWithType: HttpResponseStream.Dispose()
+- uid: Gw2Sharp.WebApi.Http.HttpResponseStream.Dispose(System.Boolean)
+  name: Dispose(Boolean)
+  href: api/Gw2Sharp.WebApi.Http.HttpResponseStream.html#Gw2Sharp_WebApi_Http_HttpResponseStream_Dispose_System_Boolean_
+  commentId: M:Gw2Sharp.WebApi.Http.HttpResponseStream.Dispose(System.Boolean)
+  fullName: Gw2Sharp.WebApi.Http.HttpResponseStream.Dispose(System.Boolean)
+  nameWithType: HttpResponseStream.Dispose(Boolean)
+- uid: Gw2Sharp.WebApi.Http.HttpResponseStream.Dispose*
+  name: Dispose
+  href: api/Gw2Sharp.WebApi.Http.HttpResponseStream.html#Gw2Sharp_WebApi_Http_HttpResponseStream_Dispose_
+  commentId: Overload:Gw2Sharp.WebApi.Http.HttpResponseStream.Dispose
+  isSpec: "True"
+  fullName: Gw2Sharp.WebApi.Http.HttpResponseStream.Dispose
+  nameWithType: HttpResponseStream.Dispose
 - uid: Gw2Sharp.WebApi.Http.HttpResponseStream.RequestHeaders
   name: RequestHeaders
   href: api/Gw2Sharp.WebApi.Http.HttpResponseStream.html#Gw2Sharp_WebApi_Http_HttpResponseStream_RequestHeaders
